# cv-project

./: CMakeLists.txt  README.md  proj.cpp
stage2/laplacian_blend/: laplacian_blend.1  main.cpp
stage2/stage2/: Blender.cpp  Blender.h  main.cpp  stage2.1
stage2/stage2.xcodeproj/: project.pbxproj
stage2/stage2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
stage2/stage2.xcodeproj/project.xcworkspace/xcuserdata/nelsonrigby.xcuserdatad/: UserInterfaceState.xcuserstate
stage2/stage2.xcodeproj/xcuserdata/nelsonrigby.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
stage2/stage2.xcodeproj/xcuserdata/nelsonrigby.xcuserdatad/xcschemes/: laplacian_blend.xcscheme  stage2.xcscheme  xcschememanagement.plist
